ON-899 | brien | fix missing colors

--- a/app/styleguides/demo/components/station-nav.css
+++ b/app/styleguides/demo/components/station-nav.css
@@ -11,7 +11,7 @@ $caret-margin-right: em(25);
 @define-mixin triangle {
   width: 0;
   height: 0;
-  border-bottom: em(12) solid $dustyGray;
+  border-bottom: em(12) solid $station-tertiaryColor;
   border-left: em(9) solid transparent;
   border-right: em(9) solid transparent;
   margin-top: em(-12);
@@ -206,6 +206,11 @@ $caret-margin-right: em(25);
           svg {
             width: 100%;
             height: auto;
+
+            .color {
+              fill: $station-primaryFontColor;
+              stroke: $station-primaryFontColor;
+            }
           }
         }
         .menu__triangle {
